--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@iconify-json/carbon": "^1.2.9",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^24.0.3",
     "@unocss/preset-icons": "^66.2.3",
     "@vitejs/plugin-vue": "^5.2.4",
@@ -38,6 +39,7 @@
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.29.0",
     "husky": "^9.1.7",
+    "js-yaml": "^4.1.0",
     "typescript": "^5.8.3",
     "unocss": "^66.2.3",
     "unplugin-auto-import": "^19.3.0",
